Modified the package to compute changes in mean andd variance

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
 TODOS
 
+2021.3.8
+
+Modified the package to compute changes in mean and variance instead of only mean.
+(By Diego Urgell)
+
 2021.1.6
 
 More comments in binseg_normal.cpp to help potential GSOC students.
